--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
         <div class="container">
       <div class="main-header">
           <div><img  class="main-logo" src="http://judehudson.com/dc/images/decoded.jpg" alt=""></div>
-          <h1 class="header-text">Jude's Tryout</h1>
-          <h2 class="header-text">HTML, CSS, JQuery</h2>
+          <h1 class="header-text">Jude's Code-a-Phobia</h1>
+          <h2 class="subheader-text">HTML, CSS, JQuery</h2>
 
       </div>
         <div class="row">
-          <div class="redbox">Red Box</div>
-          <div class="orangebox">Blue Box</div>
-          <div class="yellowbox">Yellow Box</div>
+          <div class="redbox" id="red1">Red Box</div>
+          <div class="orangebox" id="orange1">Blue Box</div>
+          <div class="yellowbox" id="yellow1">Yellow Box</div>
         </div>
         
         <div class="row">
-            <div class="yellowbox"> More Yellow</div>
-            <div class="redbox">More Red</div>
-            <div class="orangebox">More Orange</div>
+            <div class="yellowbox" id="yellow2"> More Yellow</div>
+            <div class="redbox" id="red2">More Red</div>
+            <div class="orangebox" id="orange2">More Orange</div>
         </div>
       <footer class="main-footer"></footer>
         </div> <!-- main container end -->
